Added My Classes option to bottom nav menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 	<string name="time_in_china">Time in China:</string>
 	<string name="notes_about_class">Notes about class</string>
 	<string name="create_class">Create class</string>
+	<string name="my_classes">My Classes</string>
 </resources>
