Added options entry to bottom nav menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 	<string name="notes_about_class">Notes about class</string>
 	<string name="create_class">Create class</string>
 	<string name="my_classes">My Classes</string>
+	<string name="options">Options</string>
 </resources>
