--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 	<string name="create_class">Create class</string>
 	<string name="my_classes">My Classes</string>
 	<string name="options">Options</string>
+	<string name="edit">edit</string>
 </resources>
