Added delete button to class detail fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 	<string name="class_types">Class Types:</string>
 	<string name="no_scheduled_classes">No scheduled classes!</string>
 	<string name="add_new_student">Add New Student</string>
+	<string name="delete_class">Delete Class</string>
 </resources>
