--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
 	<string name="no_scheduled_classes">No scheduled classes!</string>
 	<string name="add_new_student">Add New Student</string>
 	<string name="delete_class">Delete Class</string>
-	<string name="all_student_classes">All of Student\'s Classes</string>
+	<string name="past_classes">Past Classes</string>
 </resources>
